New font added, li tag under header > navBar > ul has been fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
@@ -19,11 +19,11 @@
     <!--Navigation menu-->
     <nav class="navBar">
       <ul>
-        <il><a href="">Platform</a></il>
-        <il><a href="">Pricing</a></il>
-        <il><a href="">Customers</a></il>
-        <il><a href="">Resources</a></il>
-        <il><a href="">About</a></il>
+        <li><a href="">Platform</a></li>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Customers</a></li>
+        <li><a href="">Resources</a></li>
+        <li><a href="">About</a></il>
       </ul>
     </nav>
       <!--Container with user's actions **They use a div instead of form-->
