--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section class="promo">
     <article class="video">
-      <video controls width="500px" poster="/matcha/resources/becreative.jpg">
+      <video controls width="500px" poster="/resources/becreative.jpg">
         <source type="video/webm"
           src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm" />
         <source type="video/mp4"
