--- a/index.html
+++ b/index.html
@@ -152,6 +152,37 @@
     </article>
   </section>
 
+  <section class="how-it-works">
+    <div class="hiw-header hiw-card1">
+    <h1>How does Matcha work?</h1>
+    <p>Your blog can be so much more than window dressing. Use Matcha's <a>simple formula</a> to transform your blog into an ecommerce growth engine.</p>
+    <button class="generalButton">Explore the platform</button>
+    </div>
+    <article class="hiw-card hiw-card2">
+      <img src="/matcha/resources/publish.png"/>
+      <h3>Publish</h3>
+      <p>Effortlessly fill your blog with content that shoppers want to read.</p>
+      <a>Publish instantly →</a>
+    </article>
+    <article class="hiw-card hiw-card3">
+      <img src="/matcha/resources/promote.png"/>
+      <h3>Promote</h3>
+      <p>Use articles in email, social, and content ads to attract more site visitors.</p>
+      <a>Drive more site visitors →</a>
+    </article>
+    <article class="hiw-card hiw-card4">
+      <img src="/matcha/resources/capture.jpeg"/>
+      <h3>Capture</h3>
+      <p>Turn readers into email subscribers and subscribers into customers.</p>
+      <a>Grow your email list →</a>
+    </article>
+    <article class="hiw-card hiw-card5">
+      <img src="/matcha/resources/measure.png"/>
+      <h3>Measure</h3>
+      <p>See what's working and what's not to easily optimize for more traffic, email subscribers, and sales.</p>
+      <a>Track performance →</a>
+    </article>
+  </section>
 </body>
 
 </html>
