--- a/index.html
+++ b/index.html
@@ -405,6 +405,28 @@
   </div>
 </section>
 
+<section class="try-matcha p-5">
+  <h1>Try Matcha free for 7 days.</h1>
+  <div class="input-group mb-3 w-25 mx-auto">
+    <input type="text" class="form-control" placeholder="Enter email address" aria-label="Enter email address" aria-describedby="basic-addon2">
+    <span class="input-group-text generalButton" id="basic-addon2">Sign Up free &rightarrow;</span>
+  </div>
+  <p class="my-0 text-center">Start publishing today with a free 7-day trial. <br>No credit card required</p>
+</section>
+<section class="try-matcha-more-details p-5 m-5">
+  <div class="try-matcha-left w-50 mx-auto">
+    <h3 class="white-title text-center">Try Matcha free for 7 days.</h3>
+    <p class="text-center">Want to learn more? <span class="category">Schedule a demo &RightArrow;</span></p>
+  </div>
+  <div class="try-matcha-right w-50 mx-auto">
+    <div class="input-group input-group-sm mb-3 w-50 mx-auto">
+      <input type="text" class="form-control" placeholder="Enter email address" aria-label="Enter email address" aria-describedby="basic-addon2">
+      <span class="input-group-text green-button" id="basic-addon2">Sign Up free &rightarrow;</span>
+    </div>
+    <p class="text-center my-0">Access Matcha's content marketing platform free for 7 days. No credit card required.</p>
+  </div>
+</section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
