--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav-link" href="#">Resources</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/matcha/aboutUs.html">About Us</a>
           </li>
         </ul>
         <form class="d-flex">
