--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a class="nav-link active" aria-current="page" href="/matcha/index.html">Platform</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/matcha/pricing.html">Pricing</a>
+            <a class="nav-link" href="/pricing.html">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Customers</a>
@@ -66,7 +66,7 @@
             <a class="nav-link" href="#">Resources</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/matcha/aboutUs.html">About Us</a>
+            <a class="nav-link" href="/aboutUs.html">About Us</a>
           </li>
         </ul>
         <form class="d-flex">
