--- a/pricing.html
+++ b/pricing.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/matcha/index.html">Platform</a>
+                        <a class="nav-link" href="/index.html">Platform</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/matcha/pricing.html">Pricing</a>
+                        <a class="nav-link active" aria-current="page" href="/pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Customers</a>
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#">Resources</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/matcha/aboutUs.html">About us</a>
+                        <a class="nav-link" href="/aboutUs.html">About us</a>
                     </li>
                 </ul>
 
