--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,10 +26,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link"  href="/matcha/index.html">Platform</a>
+                <a class="nav-link"  href="/index.html">Platform</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/matcha/pricing.html">Pricing</a>
+                <a class="nav-link" href="/pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Customers</a>
