--- a/aboutUs.html
+++ b/aboutUs.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="#">Resources</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/matcha/aboutUs.html">About Us</a>
+                <a class="nav-link active" aria-current="page" href="/aboutUs.html">About Us</a>
               </li>
             </ul>
             <form class="d-flex">
